--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mogo</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="fonts.css">
+    <link href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" rel="stylesheet">
+    <title>MoGo</title>
 </head>
+
 <body>
-    Hello world
+    <div class="banner-background">
+        <div class="header">
+            <div class="header-title">MoGo</div>
+            <div class="header-menu">
+                <a href="#" class="header-menu-item selected">about</a>
+                <a href="#" class="header-menu-item">service</a>
+                <a href="#" class="header-menu-item">work</a>
+                <a href="#" class="header-menu-item">blog</a>
+                <a href="#" class="header-menu-item">contact</a>
+                <a href="#" class="header-menu-item cart"><i class="fas fa-shopping-cart"></i></a>
+                <a href="#" class="header-menu-item search"><i class="fas fa-search"></i></a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
