--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                 <a href="#" class="header-menu-item search"><i class="fas fa-search"></i></a>
             </div>
         </div>
+
+        <div class="banner-middle-intro">
+            <div class="intro-header">Creative Template</div>
+            <div class="intro-welcome">Welcome to MoGo</div>
+            <div class="intro-separator"></div>
+            <div class="intro-button-more">learn more</div>
+        </div>
+
+        <div class="banner-bottom-menu"></div>
     </div>
 </body>
 
